--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "grunt-contrib-watch": "~0.2.0",
     "grunt": "~0.4.1",
     "sinon-chai": "~2.3.1",
-    "sinon": "~1.8.2"
+    "sinon": "~1.8.2",
+    "grunt-cli": "0.1.13"
   },
   "license": "MIT"
 }
